Copy jmod if reduce failed